Fix relative paths bug